--- a/style.css
+++ b/style.css
@@ -97,6 +97,13 @@
 }
 
 /* selectors in multiple elements */
+/* :root {
+    font-size: 62.5%;
+} */
+
+* {
+    box-sizing: border-box;
+}
 
 img {
     max-width: 100%;
@@ -109,12 +116,15 @@ img {
     /* background-color: blue; */
 }
 
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+
 /* HEADER Section */
 
 .header {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -173,7 +183,7 @@ img {
     list-style: none;
     text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
-    font-size: 13px;
+    font-size: 13px; /* add rem */
     flex: 1;
     display: inline-block;
 }
@@ -209,7 +219,7 @@ main {
 .banner {
     position: relative;
     /* margin: 0 auto; */
-    height: 100vh;
+    /* height: 100vh; */
     height: 380px;
     display: flex;
     justify-content: center;
@@ -222,23 +232,13 @@ main {
 }
 
 .banner-text {
-    /* font-family: 'Raleway', sans-serif; */
-    /* text-align: center; */
-    /* position: absolute; */
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
-    /* display: flex;
-    align-items: center;
-    flex-direction: column; */
     text-align: center;
     color: white;
-    /* width: 100%; */
 }
 
 .new-collection {
     font-family: 'Raleway', sans-serif;
-    font-size: 20px;
+    font-size: 20px; /* add rem */
     text-transform: uppercase;
     /* max-width: 100%;
     order: 1; */
@@ -246,7 +246,7 @@ main {
 
 .springsummer {
     font-family: 'Playfair Display', sans-serif;
-    font-size: 35px;
+    font-size: 35px; /* add rem */
     font-weight: normal;
     text-align: center;
     /* max-width: 100%;
@@ -255,52 +255,229 @@ main {
 
 /* Hand Craft Section */
 
+.hand-craft {
+    text-align: center;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.hand-craft h2 {
+    font-size: 2rem;
+
+}
+
+.hand-crafted-word {
+    font-family: 'Playfair Display', sans-serif;
+    font-style: italic;
+    font-weight: normal;
+}
+
+.styles-word {
+    font-family: 'Playfair Display', sans-serif;
+    /* font-weight: nor */
+}
+
+.hand-craft p {
+    font-family: 'Raleway', sans-serif;
+    font-weight: lighter;
+}
 
 
 /* Category Section */
 
+.category-container {
+    flex-wrap: wrap;
+    display: flex;
+}
 
+.category-item {
+    height: 250px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.category-item h3 {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+}
+
+.mens-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/mens-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    order: 1;
+    width: 100%;
+    border-bottom: 8px solid white;
+}
+
+.trends-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/trends-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    order: 2;
+    width: 50%;
+    border-right: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+.glasses-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/glasses-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    order: 3;
+    width: 50%;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+.sales-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/sale-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    order: 4;
+    width: 50%;
+    border-top: 4px solid white;
+    border-right: 4px solid white;
+}
+
+.bags-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/bags-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    order: 5;
+    width: 50%;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+}
+
+.womens-category {
+    background-image: linear-gradient(rgba(0,0,0,0.22), rgba(0,0,0,0.22)),
+    url(images/womens-category.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    order: 6;
+    width: 100%;
+    border-top: 8px solid white;
+}
 
 /* Slide Section */
+
+.carousel {
+    padding: 0;
+}
+
+.carousel-list {
+    padding: 0;
+}
+
+.carousel h2 {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    color: red;
+    font-weight: lighter;
+}
+
+.most-loved {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.carousel li {
+    list-style: none;
+}
+
+.carousel-item {
+    text-align: center;
+}
+
+.carousel-item p {
+    color: #A1A1A1;
+}
+
 
 
 
 /* Subscription Section */
 
 .subscription {
-    /* position: relative; */
-    /* margin: 0 auto; */
     height: 270px;
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(images/wave-bkgd.jpg);
     background-position: center, bottom;
     background-repeat: no-repeat, no-repeat;
-    /* background-size: cover, contain; */
+
 }
 
 .subscription-text {
     color: white;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.subscription-text h2 {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 2.5rem;
+}
+
+.sign-text {
+    font-style: italic;
+    font-weight: normal;
+}
+
+.subscription-text p {
+    font-weight: lighter;
+    font-size: 1.1rem;
 }
 
 /* Footer Section */
 footer {
     background-color: #363636;
     width: 100%;
-    height: 300px;
-    flex-direction: column;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: auto;
+    border-top: 6px solid white;
+    /* align-items: center; */
 }
 
 footer a {
     color: #fff;
-    /* display: inline-block; */
+    text-decoration: none;
 }
 
 footer h3 {
     text-align: center;
     color: white;
+    font-family: 'Playfair Display', sans-serif;
+    font-weight: normal;
+}
+
+.footer-address {
+    color: #acacac;
+    /* font-family: 'Playfair Display', sans-serif;
+    font-weight: normal; */
+}
+
+.footer-detail {
+    order: 1;
+    width: 100%;
 }
 
  /* .footer-nav {
@@ -311,20 +488,57 @@ footer h3 {
 .footer-nav {
     height: 100px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
-.footer-nav ul{ 
+.footer-item {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .footer-nav li {
     padding: 0;
     list-style: none;
     color: white;
+}
+
+.social-media {
+    order: 2;
+    width: 33%;
+    display: flex;
+    align-items: center;
     justify-content: space-evenly;
+    text-align: center;
+    padding: 0;
+    margin: 15px;
+    flex-wrap: wrap;
+}
+
+.facebook {
+    order: 1;
+    width: 20%;
+}
+
+.twitter {
+    order: 2;
+    width: 20%;
+
+}
+
+.instagram {
+    order: 3;
+    width: 20%;
+
+}
+
+.pinterest {
+    order: 4;
+    width: 20%;
+
+}
+
+.google {
+    order: 5;
+    width: 20%;
 }
 
 .social-media span {
@@ -336,6 +550,7 @@ footer h3 {
 }
 
 /* Media Queries */
+
 
 
 
