--- a/style.css
+++ b/style.css
@@ -314,7 +314,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     order: 1;
-    width: 100%;
+    height: 50vw;
+    width: 100vw;
     border-bottom: 8px solid white;
 }
 
@@ -325,7 +326,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover; 
     order: 2;
-    width: 50%;
+    width: 50vw;
+    height: 50vw;
     border-right: 4px solid white;
     border-bottom: 4px solid white;
 }
@@ -337,7 +339,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover; 
     order: 3;
-    width: 50%;
+    width: 50vw;
+    height: 50vw;
     border-left: 4px solid white;
     border-bottom: 4px solid white;
 }
@@ -349,7 +352,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover; 
     order: 4;
-    width: 50%;
+    width: 50vw;
+    height: 50vw;
     border-top: 4px solid white;
     border-right: 4px solid white;
 }
@@ -361,7 +365,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover; 
     order: 5;
-    width: 50%;
+    width: 50vw;
+    height: 50vw;
     border-top: 4px solid white;
     border-left: 4px solid white;
 }
@@ -373,7 +378,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover; 
     order: 6;
-    width: 100%;
+    height: 50vw;
+    width: 100vw;
     border-top: 8px solid white;
 }
 
@@ -447,6 +453,31 @@ main {
     font-weight: lighter;
     font-size: 1.1rem;
 }
+
+
+
+/* form section */
+
+.entire-form {
+    /* background-color: red; */
+    height: 15%;
+    display: flex;
+    justify-content: center;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+}
+
+.email-container {
+
+}
+
+.button-container {
+    background-color: blue;
+}
+
 
 /* Footer Section */
 footer {
